# EDCS

./: .gitignore  README.md  connect.txt  dbcheck.py  gen_proto.bat  registry.db  registry_server.py  registry_server_local.py  registry_server_wifi.py  test_client.py
cpp-client/: CMakeLists.txt  heartbeat_service.proto  main.cpp
java-client/: build.gradle
java-client/src/main/java/org/example/demo/: RegistryDemo.java
java-client/src/main/proto/: object_repository.proto
java-server/: build.gradle  config.json
java-server/src/main/java/objectrepo/: Config.java  HeartbeatServiceImpl.java  LeaderElectionTask.java  ObjectRepositoryImpl.java  ObjectRepositoryServer.java  RegistryDatabase.java
java-server/src/main/proto/: heartbeat_service.proto  object_repository.proto
proto/: heartbeat_service_pb2.py  heartbeat_service_pb2_grpc.py  object_repository.proto  object_repository_pb2.py  object_repository_pb2_grpc.py
python-server/: config.json  heartbeat_service_pb2.py  heartbeat_service_pb2_grpc.py  object_repository_pb2.py  registry_server_wifi.py
另一台电脑file/: heartbeat_service.proto  heartbeat_service_pb2.py  heartbeat_service_pb2_grpc.py  object_repository.proto  object_repository_pb2_grpc.py  registry_server_wifi.py
